--- a/final_project_proposal.html
+++ b/final_project_proposal.html
@@ -39,10 +39,10 @@
     <h2>Final Project</h2>
 
     <h3>Objective:</h3>
-    <p>The goal of this project is to design and run a simulation using the generative agents that represent each member of the class. You will explore a research question or class dynamic using the prepared agent bank, drawing insights into classroom behaviors, preferences, or interactions.</p>
+    <p>The goal of this project is to design and run a simulation using generative agents. We've compiled an agent bank that represents the members of the class, which you can choose to use if you wish. You will explore a research question using generative agents, drawing insights into behaviors, preferences, or interactions in a certain setting.</p>
 
     <h3>Project Overview:</h3>
-    <p>Each group will use the pre-existing generative agents, created during the class, to simulate behaviors and interactions among classmates. You’ll develop a research question around classroom dynamics, such as decision-making, collaboration, or opinion diversity, and use the agents to conduct experiments, surveys, or social simulations that help answer that question.</p>
+    <p>Each group will use generative agents, either those that were created during the class or those you've created, to simulate behaviors and interactions. You’ll develop a research question around the capabilities and limitations of generative agents in simulating human behavior, such as decision-making, collaboration, or opinion diversity, and use the agents to conduct experiments, surveys, or social simulations that help answer that question.</p>
 
     <h3>Steps:</h3>
 
@@ -53,13 +53,13 @@
     </ul>
 
     <h4>Research Question Development:</h4>
-    <p>Choose a research question that explores something meaningful about the class. Examples might include:</p>
+    <p>Choose a research question that explores something meaningful about human behavior, agents, and/or simulations. A few examples that utilize the class agent bank might include:</p>
     <ul>
         <li>How do different personality traits affect group collaboration in problem-solving tasks?</li>
         <li>Can we simulate how class opinions might change on a controversial topic over time?</li>
         <li>What types of group dynamics emerge when agents with differing opinions or backgrounds work together on a project?</li>
     </ul>
-    <p>Your research question should guide how you’ll use the generative agents to simulate interactions or responses.</p>
+    <p>Your research question should guide how you’ll use the generative agents to simulate interactions or responses, and should be situated in the context of prior work in that area. You should also consider how you will analyze the results of your simulation.</p>
 
     <!-- <p><a href="research_question_guide.html">[Here are some project ideas]</a></p> -->
 
@@ -68,17 +68,17 @@
     <p>Design a simulation, survey, or experiment using the agents. Possible methods include:</p>
     <ul>
         <li>Running an interaction between agents (e.g., simulating group discussions, voting, or problem-solving).</li>
-        <li>Creating and analyzing responses to a class-wide survey that the agents will complete.</li>
+        <li>Creating and analyzing responses to a survey that the agents will complete.</li>
         <li>Investigating emergent behaviors or patterns by running a series of interactions between agents.</li>
     </ul>
-    <p>Be creative! The project is open-ended, but it should relate back to the dynamics or behaviors of your classmates.</p>
+    <p>Be creative! The project is open-ended. Feel free to ask us for help or to explore other simulations or experiments that you think might be interesting.</p>
 
     <h4>Running the Simulation:</h4>
-    <p>Use the agents that represent each of your classmates. You’ll have access to the full agent bank, including interview data and agent models, which can be queried to simulate decisions or responses.</p>
+    <p>If you choose to use the agents that represent each of your classmates, you’ll have access to the full agent bank, including interview data and agent models, which can be queried to simulate decisions or responses. Otherwise, you can create your own agents using the framework we've provided.</p>
     <p>Record the outputs of the simulation (e.g., survey results, interaction logs) and analyze the findings in relation to your research question.</p>
 
     <h4>Analysis and Reflection:</h4>
-    <p>Analyze the simulation outcomes. What did you learn about your classmates through the behavior of their agents? How did the simulation reflect or differ from real-life dynamics?</p>
+    <p>Analyze the simulation outcomes. What did you learn through the behavior of the agents? How did the simulation reflect or differ from real-life dynamics?</p>
     <p>Reflect on the effectiveness of the agents in representing their real-life counterparts and discuss any limitations or improvements.</p>
 
     <h3>Key Deliverables:</h3>
@@ -133,9 +133,9 @@
     <h3>Important Dates:</h3>
 
     <ul>
-        <li><strong>Proposal Deadline:</strong> 11/4/2024</li>
-        <li><strong>Final Presentation:</strong> 12/2/2024</li>
-        <li><strong>Final Project Submission:</strong> 12/4/2024</li>
+        <li><strong>Proposal Deadline:</strong> 11/6/2024</li>
+        <li><strong>Final Presentation:</strong> 12/2/2024 and 12/4/2024</li>
+        <li><strong>Final Project Submission:</strong> 12/6/2024</li>
     </ul>
 
     <h3>Additional Considerations:</h3>
