--- a/final_project_proposal.html
+++ b/final_project_proposal.html
@@ -86,7 +86,7 @@
     <h4><a href="https://canvas.stanford.edu/courses/198745/assignments/654611">Project Proposal (10%):</a></h4>
     <ul>
         <li><strong>Due:</strong> November 6, 2024.</li>
-        <li>Submit a 1-2 page proposal using the template on Canvas that includes:</li>
+        <li>Submit a 1-2 page proposal using <a href="https://canvas.stanford.edu/courses/198745/assignments/654611">the template on Canvas</a> that includes:</li>
         <ul>
             <li>Your research question.</li>
             <li>The methodology for how you plan to use the generative agents in your simulation.</li>
