--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
 
           <tr>
             <td class="lecture_date">M, 11/11<br><span>(Week 8)</span></td>
-            <td class="lecture_titles">Ethics and Limitations</td>
+            <td class="lecture_titles">Ethics and Limitations <a href="static_dir/pdf/StanfordCS222_Lecture13.pdf" style="font-weight:500" target="_blank">[Slides]</a></td>
             <td>
               <p class="lecture_desc">
                 What ethical considerations and limitations must be addressed with the rise of powerful simulation technologies? How might simulations impact our ability to represent or reduce bias, protect privacy, and preserve human autonomy?
@@ -339,7 +339,7 @@
 
           <tr>
             <td class="lecture_date">W, 11/13<br><span>(Week 9)</span></td>
-            <td class="lecture_titles">Simulating Ourselves and Our Societies With AI</td>
+            <td class="lecture_titles">Simulating Ourselves and Our Societies With AI <a href="static_dir/pdf/StanfordCS222_Lecture14.pdf" style="font-weight:500" target="_blank">[Slides]</a></td>
             <td>
               <p class="lecture_desc">
                 Can simulations of human behavior be the killer application of modern AI? What are the potential implications, blue-sky use cases, and how might simulating ourselves and our societies shape the world we live in?
